--- a/templates/reservations/index.html.twig
+++ b/templates/reservations/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Réservation votre chauffeur privée en ligne{% endblock %}
-{% block meta_description %}Réservation VTC ou chauffeur privéeà Sète, Frontignan, Agde et Montpellier. Nous sommes disponibles 24h/24 et 7j/7{% endblock %}
+{% block title %}Réservation chauffeur privée en ligne{% endblock %}
+{% block meta_description %}Réservation VTC ou chauffeur privée à Sète, Frontignan, Agde et Montpellier. Nous sommes disponibles 24h/24 et 7j/7{% endblock %}
 
 
 {% block stylesheets %}
@@ -103,6 +103,10 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="section7">
+        <h3 class="wow animate__animated animate__lightSpeedInRight"><strong>Besoin d’un chauffeur privé ? Contactez
+                nous 24h/7j au 06 24 51 22 97</strong></h3>
     </section>
 
 {% endblock %}
