--- a/templates/stripe/paiement.html.twig
+++ b/templates/stripe/paiement.html.twig
@@ -36,7 +36,7 @@
                 elements,
                 confirmParams: {
                     // Make sure to change this to your payment completion page
-                    return_url: "http://127.0.0.1:8000/success",
+                    return_url: "http://127.0.0.1:8000/success/{{ id }}",
                 },
             });
 
