--- a/templates/stripe/success.html.twig
+++ b/templates/stripe/success.html.twig
@@ -20,7 +20,7 @@
                         <a href="{{ asset('/') }}" type="button" class="button btn btn-outline-light">Retour à
                             l'accueil</a>
                         <a href="tel:0624512297" type="button" class="button2 btn btn-danger ms-3">06 24 51 22 97</a>
-                        <a href="{{ path('pdf_id', {unique_id: client.uniqueId}) }}" class="button2 btn btn-danger ms-3">téléchargez votre facture</a>
+                        <a href="{{ path('pdf_id', {unique_id: client.uniqueId}) }}" class="button2 btn btn-danger ms-3" target="_blank">Télécharger votre facture</a>
                     </div>
                 </div>
             </div>
