--- a/templates/administrator/clients/index.html.twig
+++ b/templates/administrator/clients/index.html.twig
@@ -22,6 +22,7 @@
                         <th>Adresse depart</th>
                         <th>Adresse arrivee</th>
                         <th>date</th>
+                        <th>Prix</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
@@ -34,6 +35,7 @@
                             <td>{{ client.adresseDepart }}</td>
                             <td>{{ client.adresseArrivee }}</td>
                             <td>{{ client.date }}</td>
+                            <td>{{ client.prix }} €</td>
                             <td>
                                 {{ include('administrator/clients/_delete_form.html.twig') }}
                                 <a class=" btn btn-primary" href="{{ path('clients_show', {'id': client.id}) }}">Infos clients</a>
