--- a/templates/administrator/clients/show.html.twig
+++ b/templates/administrator/clients/show.html.twig
@@ -57,7 +57,8 @@
             </tr>
             <tr>
                 <th>Facture client</th>
-                <td><a href="{{ path('pdf_id', {unique_id: client.uniqueId}) }}" class="button2 btn btn-danger ms-3" target="_blank">Télécharger la facture client</a>
+                <td><a href="{{ path('pdf_id', {unique_id: client.uniqueId}) }}" class="button2 btn btn-danger" target="_blank">Télécharger la facture client</a>
+                    <a class="button2 btn btn-danger ms-3" href="mailto:{{ client.email }}?subject=Votre%20facture%20&body=Veillez%20trouver%20ci-joint%20le%20lien%20de%20votre%20facture%0D%0A%0D%0Ahttp://127.0.0.1:8000/pdf/{{ client.uniqueId }}%0D%0A%0D%0Awww.cardosovtc34.fr">Envoyer facture client</a>
                 </td>
             </tr>
         </tbody>
