--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,8 +61,8 @@ body {
     border-radius: 20px;
     padding: 20px;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
-    margin-bottom: 50px;
-
+    margin-bottom: 20px;
+    min-width: 350px;
 }
 
 .logo {
@@ -319,6 +319,7 @@ body {
 @media screen and (max-width: 450px) {
     .card,
     .card-infos,
+    .card-admin,
     .img-site,
     .block-responsive,
     .temoignage{
