--- a/templates/administrator/clients/show.html.twig
+++ b/templates/administrator/clients/show.html.twig
@@ -2,71 +2,50 @@
 
 {% block title %}Clients{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+{% endblock %}
+
 {% block body %}
-    <h1>Clients</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ client.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ client.nom }}</td>
-            </tr>
-            <tr>
-                <th>Prenom</th>
-                <td>{{ client.prenom }}</td>
-            </tr>
-            <tr>
-                <th>Entreprise</th>
-                <td>{{ client.entreprise }}</td>
-            </tr>
-            <tr>
-                <th>Rue</th>
-                <td>{{ client.rue }}</td>
-            </tr>
-            <tr>
-                <th>Codepostal</th>
-                <td>{{ client.codepostal }}</td>
-            </tr>
-            <tr>
-                <th>Ville</th>
-                <td>{{ client.ville }}</td>
-            </tr>
-            <tr>
-                <th>Telephone</th>
-                <td>{{ client.telephone }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ client.email }}</td>
-            </tr>
-            <tr>
-                <th>Adresse départ</th>
-                <td>{{ client.adresseDepart }}</td>
-            </tr>
-            <tr>
-                <th>Adresse arrivée</th>
-                <td>{{ client.adresseArrivee }}</td>
-            </tr>
-            <tr>
-                <th>Date</th>
-                <td>{{ client.date }}</td>
-            </tr>
-            <tr>
-                <th>Facture client</th>
-                <td><a href="{{ path('pdf_id', {unique_id: client.uniqueId}) }}" class="button2 btn btn-danger" target="_blank">Télécharger la facture client</a>
-                    <a class="button2 btn btn-danger ms-3" href="mailto:{{ client.email }}?subject=Votre%20facture%20&body=Veillez%20trouver%20ci-joint%20le%20lien%20de%20votre%20facture%0D%0A%0D%0Ahttp://127.0.0.1:8000/pdf/{{ client.uniqueId }}%0D%0A%0D%0Awww.cardosovtc34.fr">Envoyer facture client</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a class="btn btn-primary" href="{{ path('clients_index') }}">Retour à la liste</a>
-
-    <a class="btn btn-success" href="{{ path('clients_edit', {'id': client.id}) }}">Éditer</a>
-
-    {{ include('administrator/clients/_delete_form.html.twig') }}
+    <section class="section-admin">
+        <div class="container">
+            <div class="row">
+                <H2 class="H2-corps">Infos clients</H2>
+                <div class="col">
+                    <div class="card-admin">
+                        <h3 class="H2-corps">Infos course</h3>
+                        <div><strong>Date de la course:</strong> {{ client.date }}</div>
+                        <div><strong>Nom client:</strong> {{ client.nom }}</div>
+                        <div><strong>Prénom client:</strong> {{ client.prenom }}</div>
+                        <div><strong>Entreprise:</strong> {{ client.entreprise }}</div>
+                        <div><strong>Téléphone client:</strong> {{ client.telephone }}</div>
+                        <div><strong>Email client:</strong> {{ client.email }}</div>
+                        <div><strong>Adresse de départ:</strong> {{ client.adresseDepart }}</div>
+                        <div><strong>Adresse d'arrivée:</strong> {{ client.adresseArrivee }}</div>
+                        <div><strong>Infos complémentaires</strong> {{ client.infos }}</div>
+                        <div><strong>ID unique</strong> {{ client.uniqueId }}</div>
+                        <a class="btn btn-primary mt-3" href="{{ path('clients_index') }}">Retour à la liste</a>
+                        {{ include('administrator/clients/_delete_form.html.twig') }}
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card-admin">
+                        <h3 class="H2-corps">Infos facturation</h3>
+                        <div><strong>Date de réservation:</strong> {{ client.dateReservation }}</div>
+                        <div><strong>Nom client:</strong> {{ client.nom }}</div>
+                        <div><strong>Prénom client:</strong> {{ client.prenom }}</div>
+                        <div><strong>Adresse</strong> {{ client.rue }}</div>
+                        <div><strong>Code postal</strong> {{ client.codePostal }}</div>
+                        <div><strong>Ville:</strong> {{ client.ville }}</div>
+                        <a href="{{ path('pdf_id', {unique_id: client.uniqueId}) }}" class=" btn btn-success mt-3"
+                           target="_blank">Télécharger la facture client</a>
+                        <a class=" btn btn-success ms-3 mt-3"
+                           href="mailto:{{ client.email }}?subject=Votre%20facture%20&body=Veillez%20trouver%20ci-joint%20le%20lien%20de%20votre%20facture%0D%0A%0D%0Ahttp://127.0.0.1:8000/pdf/{{ client.uniqueId }}%0D%0A%0D%0Awww.cardosovtc34.fr">Envoyer
+                            facture client</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
