--- a/templates/administrator/clients/show.html.twig
+++ b/templates/administrator/clients/show.html.twig
@@ -25,8 +25,8 @@
                         <div><strong>Adresse d'arrivée:</strong> {{ client.adresseArrivee }}</div>
                         <div><strong>Infos complémentaires</strong> {{ client.infos }}</div>
                         <div><strong>ID unique</strong> {{ client.uniqueId }}</div>
-                        <a class="btn btn-primary mt-3" href="{{ path('clients_index') }}">Retour à la liste</a>
-                        {{ include('administrator/clients/_delete_form.html.twig') }}
+                        <a class="button2 btn btn-primary mt-3" href="{{ path('clients_index') }}">Retour à la liste</a>
+                        <div class="mt-3">{{ include('administrator/clients/_delete_form.html.twig') }}</div>
                     </div>
                 </div>
                 <div class="col">
@@ -38,11 +38,11 @@
                         <div><strong>Adresse</strong> {{ client.rue }}</div>
                         <div><strong>Code postal</strong> {{ client.codePostal }}</div>
                         <div><strong>Ville:</strong> {{ client.ville }}</div>
-                        <a href="{{ path('pdf_id', {unique_id: client.uniqueId}) }}" class=" btn btn-success mt-3"
+                        <a href="{{ path('pdf_id', {unique_id: client.uniqueId}) }}" class="button2 btn btn-success mt-3"
                            target="_blank">Télécharger la facture client</a>
-                        <a class=" btn btn-success ms-3 mt-3"
+                        <a class="button2 btn btn-success mt-3"
                            href="mailto:{{ client.email }}?subject=Votre%20facture%20&body=Veillez%20trouver%20ci-joint%20le%20lien%20de%20votre%20facture%0D%0A%0D%0Ahttp://127.0.0.1:8000/pdf/{{ client.uniqueId }}%0D%0A%0D%0Awww.cardosovtc34.fr">Envoyer
-                            facture client</a>
+                           la facture client</a>
                     </div>
                 </div>
             </div>
