--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -144,7 +144,7 @@
                             <p><i class="fas fa-home me-3"></i> Montpellier et Frontignan</p>
                             <p>
                                 <i class="fas fa-envelope me-3"></i>
-                                <a href="mailto:cardosovtc34@gmail.com " class="text-reset text-decoration-none">cardosovtc34@gmail.com</a>
+                                <a href="mailto:contact@cardosovtc34.fr" class="text-reset text-decoration-none">contact@cardosovtc34.fr</a>
                             </p>
                             <p>
                                 <i class="fas fa-phone me-3"></i>
