--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,8 +44,9 @@ body {
 }
 
 .section-admin {
-    padding-top: 100px;
+    padding-top: 120px;
    padding-bottom: 100px;
+    background-color: #f3f4f6;
 }
 
 .section-informations {
@@ -57,12 +58,12 @@ body {
 
 
 .card-admin {
-    background: #f2F2F2F2;
+    background: #ffffff;
     border-radius: 20px;
+    border: 1px solid white;
     padding: 20px;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
     margin-bottom: 20px;
-    min-width: 350px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
 
 .logo {
@@ -305,6 +306,7 @@ body {
 @media screen and (max-width: 380px) {
     .card,
     .card-infos,
+    .card-admin,
     .img-site,
     .block-responsive,
     .temoignage{
@@ -313,10 +315,9 @@ body {
         margin-bottom: 20px;
     }
 
-
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 600px) {
     .card,
     .card-infos,
     .card-admin,
@@ -329,13 +330,12 @@ body {
     }
 }
 
-@media screen and (max-width: 800px) {
-    .card,
-    .card-infos,
-    .img-site,
-    .block-responsive,
-    .temoignage{
-        width: 350px;
+@media screen and (min-width: 600px) {
+
+    .card-admin
+
+    {
+        width: 500px;
         margin: auto;
         margin-bottom: 20px;
     }
