--- a/templates/administrator/clients/index.html.twig
+++ b/templates/administrator/clients/index.html.twig
@@ -10,19 +10,21 @@
 {% block body %}
     <section class="section-admin">
         <div class="container">
+            <h2 class="H2-corps">Liste des courses</h2>
+            <a class="button2 btn btn-primary" href="{{ path('admin') }}">Retour</a>
+            <a class="button2 btn btn-danger" href="{{ asset('/logout') }}">Se déconnecter</a>
             <div class="row">
-                <h2 class="H2-corps">Liste des courses</h2>
                 {% for client in clients %}
                     <div class="col">
                         <div class="card-admin">
-                            <div><strong>Date de la course:</strong> {{ client.date }}</div>
+                            <H4><strong>Date de la course:</strong> {{ client.date }}</H4>
                             <div><strong>Nom client:</strong> {{ client.nom }}</div>
                             <div><strong>Prénom client:</strong> {{ client.prenom }}</div>
                             <div><strong>Téléphone client:</strong> {{ client.telephone }}</div>
                             <div><strong>Adreese de départ:</strong> {{ client.adresseDepart }}</div>
                             <div><strong>Adreese d'arrivée:</strong> {{ client.adresseArrivee }}</div>
                             <div>
-                                {{ include('administrator/clients/_delete_form.html.twig') }} <a class=" btn btn-primary" href="{{ path('clients_show', {'id': client.id}) }}">Infos
+                                {{ include('administrator/clients/_delete_form.html.twig') }} <a class=" button2 btn btn-primary" href="{{ path('clients_show', {'id': client.id}) }}">Infos
                                     clients</a>
                             </div>
                         </div>
@@ -33,8 +35,6 @@
                     </tr>
                 {% endfor %}
             </div>
-            <a class="bouton btn btn-primary" href="{{ path('admin') }}">Retour</a>
-
         </div>
     </section>
 {% endblock %}
