--- a/templates/administrator/index.html.twig
+++ b/templates/administrator/index.html.twig
@@ -15,7 +15,7 @@
                 <div class="card-admin">
                     <h2 class="H2-corps">Bienvenue Mr Cardoso</h2>
                     <a class="button2 btn btn-primary" href="{{ path('clients_index') }}">Mes réservations</a>
-                    <a class="button2 btn btn-danger" href="/{{ path('app_logout') }}">Se déconnecter</a>
+                    <a class="button2 btn btn-danger" href="{{ asset('/logout') }}">Se déconnecter</a>
                 </div>
             </div>
         </div>
