--- a/templates/stripe/index.html.twig
+++ b/templates/stripe/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>stripe</h1>
-    <form action="/create-checkout-session" method="POST">
+    <form action="{{ asset('/create-checkout-session') }}" method="POST">
       <button type="submit" id="checkout-button">Checkout</button>
 
 {% endblock %}
