--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,19 +27,19 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Accueil</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('accueil') }}">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ asset('#nosServices') }}">Nos services</a>
+                        <a class="nav-link" href="{{ path('accueil') }}#nosServices"><span data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Nos services</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ asset('#informations') }}">Informations</a>
+                        <a class="nav-link" href="{{ path('accueil') }}#informations"><span data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Informations</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ asset('#clients') }}">Avis clients</a>
+                        <a class="nav-link" href="{{ path('accueil') }}#clients"><span data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Avis clients</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ asset('#contact') }}">Contact</a>
+                        <a class="nav-link" href="{{ path('accueil') }}#contact"><span data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Contact</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="{{ path('reservation') }}" type="button" class="button-head btn btn-danger ms-3">Réserver une course</a>
@@ -121,16 +121,16 @@
                                 Navigation
                             </h6>
                             <p>
-                                <a href="/" class="text-reset text-decoration-none">Accueil</a>
+                                <a href="{{ path('accueil') }}" class="text-reset text-decoration-none">Accueil</a>
                             </p>
                             <p>
-                                <a href="{{ asset('#nosServices') }}" class="text-reset text-decoration-none">Nos services</a>
+                                <a href="{{ path('accueil') }}#nosServices" class="text-reset text-decoration-none">Nos services</a>
                             </p>
                             <p>
                                 <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Réservation en ligne</a>
                             </p>
                             <p>
-                                <a href="{{ asset('#contact') }}" class="text-reset text-decoration-none">Contact</a>
+                                <a href="{{ path('accueil') }}#contact" class="text-reset text-decoration-none">Contact</a>
                             </p>
                         </div>
                         <!-- Grid column -->
