--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -19,7 +19,6 @@
 {% endblock %}
 
 {% block body %}
-
     <section class="section1">
         <div class="parallax-effect text-center">
             <div class="container col-sm-6">
@@ -97,9 +96,9 @@
                href="{{ path('reservation') }}">Réserver une course</a>
         </div>
     </section>
-    <section class="section4">
+    <section class="section4" id="nosServices">
         <div class="container col-sm-12 text-center">
-            <h2 class="H2-corps" id="nosServices">Nos services de transport de passagers</h2>
+            <h2 class="H2-corps">Nos services de transport de passagers</h2>
             <div class="row">
                 <div class="col mt-3">
                     <div class="card mx-auto wow animate__animated animate__zoomIn" style="width: 18rem;">
