--- a/templates/reservations/course.html.twig
+++ b/templates/reservations/course.html.twig
@@ -18,6 +18,30 @@
     <script type="text/javascript">
         new WOW().init();
     </script>
+    <script async src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBecBMsyAABsRW-QnsoFMmkoc9CE8rBCA"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            directionsService = new google.maps.DirectionsService();
+            directionsRenderer = new google.maps.DirectionsRenderer();
+            var map = new google.maps.Map(document.getElementById('map'));
+            directionsRenderer.setMap(map);
+            calcRoute()
+        })
+
+        function calcRoute() {
+            var request = {
+                origin: "{{ adresseDepart }}",
+                destination: "{{ adresseArrivee }}",
+                travelMode: 'DRIVING'
+            };
+            directionsService.route(request, function (result, status) {
+                if (status === 'OK') {
+                    directionsRenderer.setDirections(result);
+                }
+            });
+        }
+    </script>
 {% endblock %}
 
 {% block body %}
@@ -28,11 +52,9 @@
                     <div class="col wow animate__animated animate__zoomIn mt-3">
                         <div class="card-infos">
                             <h2 class="H2-corps">Informations de la course </h2>
-                            <ul>
-                                <li><h6>Date de réservation: {{ date }}</h6></li>
-                                <li><h6>Adresse de départ: {{ adresseDepart }}</h6></li>
-                                <li><h6>Adresse d'arrivée: {{ adresseArrivee }}</h6></li>
-                            </ul>
+                            <strong>Date de réservation:</strong> {{ date }} <br />
+                            <strong>Adresse de départ:</strong> {{ adresseDepart }}<br />
+                            <strong>Adresse de d'arrivée:</strong> {{ adresseArrivee }}
                             <div class="row">
                                 <div class="col">
                                     <h5>Prix</h5>
@@ -43,13 +65,12 @@
                                     <h2 class="H2-corps">{{ distance }}km</h2>
                                 </div>
                             </div>
+                            <div id="map"></div>
                         </div>
                         <div class="card-infos mt-5">
                             <h3 class="H2-corps">Paiement 100% sécurisé </h3>
                             <img class="img-fluid" src="{{ asset('images/paiement-cb.png') }}" alt="">
                         </div>
-
-
                     </div>
                     <div class="col ">
                         {{ form_start(formulaireCommande) }}
@@ -113,7 +134,8 @@
                         <div class="name">Fred</div>
                         <div class="comment">Professionnel</div>
                         <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
-                        <p>La relation entretenue depuis 2019 s’appuie sur la qualité du service, la ponctualité, la gestion des imprévus, les véhicules utilisés et par ailleurs des échanges fluides.</p>
+                        <p>La relation entretenue depuis 2019 s’appuie sur la qualité du service, la ponctualité, la
+                            gestion des imprévus, les véhicules utilisés et par ailleurs des échanges fluides.</p>
                     </div>
                 </div>
                 <div class="col wow animate__animated animate__zoomIn">
@@ -121,7 +143,9 @@
                         <div class="name">Alice</div>
                         <div class="comment">EFFICACE</div>
                         <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
-                        <p>Cardoso VTC prend en charge nos touristes depuis plusieurs années : français ou internationaux sont toujours étonnés de leur sens du service, de leur gentillesse et de leurs bonnes adresses.</p>
+                        <p>Cardoso VTC prend en charge nos touristes depuis plusieurs années : français ou
+                            internationaux sont toujours étonnés de leur sens du service, de leur gentillesse et de
+                            leurs bonnes adresses.</p>
                     </div>
                 </div>
                 <div class="col wow animate__animated animate__zoomIn">
@@ -129,15 +153,15 @@
                         <div class="name">Eric</div>
                         <div class="comment">PONCTUEL</div>
                         <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
-                        <p>Chauffeur discret, cordial, très aimable et ponctuel...Conduite agréable, dans un véhicule confortable, propre et spacieux... Je recommande vivement.</p>
+                        <p>Chauffeur discret, cordial, très aimable et ponctuel...Conduite agréable, dans un véhicule
+                            confortable, propre et spacieux... Je recommande vivement.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="section7">
-        <h3 class="wow animate__animated animate__lightSpeedInRight"><strong>Besoin d’un chauffeur privé ? Contactez
-                nous 24h/7j au 06 24 51 22 97</strong></h3>
+        <h3 class="wow animate__animated animate__lightSpeedInRight"><strong>Besoin d’un chauffeur privé ? Contactez-nous 24h/7j au 06 24 51 22 97</strong></h3>
     </section>
 
 {% endblock %}
