--- a/templates/reservations/index.html.twig
+++ b/templates/reservations/index.html.twig
@@ -61,7 +61,7 @@
                     </H1>
                     <H2 class="H2-corps">Cardoso VTC 34</H2>
                     <div class="mt-3">
-                    <a href="{{ asset('#contact') }}" type="button" class="button btn btn-outline-light">Devis longue distance</a>
+                    <a href="{{ path('accueil') }}#contact" type="button" class="button btn btn-outline-light">Devis longue distance</a>
                     <a href="tel:0624512297" type="button" class="button2 btn btn-danger ms-3">06 24 51 22 97</a>
                         <img src="{{ asset('images/tesla.png') }}" class="img-fluid" alt="">
                     </div>
@@ -105,8 +105,7 @@
         </div>
     </section>
     <section class="section7">
-        <h3 class="wow animate__animated animate__lightSpeedInRight"><strong>Besoin d’un chauffeur privé ? Contactez
-                nous 24h/7j au 06 24 51 22 97</strong></h3>
+        <h3 class="wow animate__animated animate__lightSpeedInRight"><strong>Besoin d’un chauffeur privé ? Contactez-nous 24h/7j au 06 24 51 22 97</strong></h3>
     </section>
 
 {% endblock %}
