--- a/templates/administrator/index.html.twig
+++ b/templates/administrator/index.html.twig
@@ -14,8 +14,9 @@
             <div class="col">
                 <div class="card-admin">
                     <h2 class="H2-corps">Bienvenue Mr Cardoso</h2>
-                    <a class="button2 btn btn-primary" href="{{ path('clients_index') }}">Mes réservations</a>
-                    <a class="button2 btn btn-danger" href="{{ asset('/logout') }}">Se déconnecter</a>
+                    <a class="button2 btn btn-primary mt-3" href="{{ path('clients_index') }}">Mes réservations</a>
+                    <a class="button2 btn btn-primary mt-3" href="{{ path('compta_index') }}">Comptabilité</a>
+                    <a class="button2 btn btn-danger mt-3" href="{{ asset('/logout') }}">Se déconnecter</a>
                 </div>
             </div>
         </div>
