--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,6 +69,15 @@ body {
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
 
+.card-admin2 {
+    background: #ffffff;
+    border-radius: 20px;
+    border: 1px solid white;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
+
 .logo {
     width: 180px;
 }
