--- a/templates/reservations/commande.html.twig
+++ b/templates/reservations/commande.html.twig
@@ -105,7 +105,7 @@
                                 {{ form_row(formulaireCommande.infos, {'attr': {'class': 'form-control', 'placeholder': 'Étage, code portail, etc...'}}) }}
                             </div>
                             <div class="form-group form-text">
-                                {{ form_row(formulaireCommande.confidentialite, {'attr': {'class': 'form-control', 'placeholder': 'Votre email...'}}) }}
+                                {{ form_row(formulaireCommande.confidentialite, {'attr': {'class': 'form-control'}}) }}
                                 J’autorise ce site à conserver mes données personnelles transmises via ce formulaire.
                                 Aucune exploitation
                                 commerciale ne sera faite des données conservées. Voir notre politique de gestion des
